@@ -1,3 +1,7 @@
+2012-02-09 Daniel Dressler <danieru.dressler@gmail.com>
+	* lib/Foomatic/filters/sql/from.pm: Added support
+	  for the option_choice table.
+
 2012-02-05 Daniel Dressler <danieru.dressler@gmail.com>
 	* lib/Foomatic/filters/xml/to.pm, lib/Foomatic/DB.pm:
 	  Moved xml generation functionality to filter.
